samples/_failures_safe/1761340274_608a46_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_26aa58be.c:186: error: expected ‘;’, ‘,’ or ‘)’ at end of input
